ぼたんよせ

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 <body>
   <h1>cocoru</h1>
   <div class="content">
-    <button id="btn">星</button>
-    <p>累計お心つけ</p>
-    <p id="result"></p>
+    <div class="cocorocount">
+      <button id="btn">星</button>
+      <div class="cocoronumber">
+        <p>累計お心つけ</p>
+        <p id="result"></p>
+      </div>
+
+    </div>
   </div>
 <script type="text/javascript">
 var cnt = 0;
