ボタン周り調整

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
 <body>
   <h1>cocoru</h1>
   <div class="content">
+    <div class="namecard">
+      <p>hoge</p>
+    </div>
     <div class="cocorocount">
-      <button id="btn">星</button>
+      <div class="cocoro-btn">
+        <button id="btn">星</button>
+        <p class="btn-text">お心つけを送る</p>
+      </div>
       <div class="cocoronumber">
         <p>累計お心つけ</p>
         <p id="result"></p>
