画像追加、カードない情報整理

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
   <h1>cocoru</h1>
   <div class="content">
     <div class="namecard">
-      <p>hoge</p>
+      <div class="first-line">
+        <img src="img/woman1.jpg" alt="">
+        <div class="namecard-info">
+          <p class="namecard-name">なまえ</p>
+          <p class="namecard-shop">アプリコット北千住店</p>
+        </div>
+      </div>
     </div>
     <div class="cocorocount">
       <div class="cocoro-btn">
