カードない情報追加スタイリング

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
           <p class="namecard-shop">アプリコット北千住店</p>
         </div>
       </div>
+      <hr>
+      <div class="secnod-line">
+        <p class="subtitle">おすすめメニュー</p>
+        <p class="body">緑茶ハイとアプリコットサワー</p>
+        <p class="subtitle">ひとこと</p>
+        <p class="body">いつもどうも</p>
+      </div>
     </div>
     <div class="cocorocount">
       <div class="cocoro-btn">
